# JitterLib

./: .gitignore  .gitmodules  CMakeLists.txt
Examples/: SimpleLoad.cpp  TilesetViewerMain.cpp  UI_Test.cpp
Examples/resource/basic/: TexturePackData.WDF
Modules/: FindSDL2.cmake
include/: FlatMath.cpp  FlatMath.h  FlatTypes.cpp  FlatTypes.h  FlatVector.h  HappyArray.h
modules/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: Basics.h  ColorList.cpp  ColorList.h  DisplayData.cpp  DisplayData.h  FrameDefMap.cpp  FrameDefMap.h  IJitFontRenderedBase.h  JitBasics.cpp  JitBasics.h  JitColorList.cpp  JitColorList.h  JitDisplayData.cpp  JitDisplayData.h  JitDisplayMaterial.h  JitDisplayTile.h  JitFontTextureFactory.cpp  JitFontTextureFactory.h  JitFrameDefMap.cpp  JitFrameDefMap.h  JitIText.h  JitLTexture.cpp  JitLTexture.h  JitLTimer.cpp  JitLTimer.h  JitResource.cpp  JitResource.h  JitSoundTrack.cpp  JitSoundTrack.h  JitSpriteInteractionsList.cpp  JitSpriteInteractionsList.h  JitSpriteSet.cpp  JitSpriteSet.h  JitUIBasics.cpp  JitUIBasics.h  LTexture.h  Material.h  SpriteInteractionsList.cpp  SpriteInteractionsList.h  SpriteSet.cpp  (+8 more)
src/UI/: JitUIFrameFactory.cpp  JitUIFrameFactory.h  JitUIIFrame.h  JitUIIFrameContent.cpp  JitUIIFrameContent.h  JitUILabeledFrame.cpp  JitUILabeledFrame.h
src/renderedFonts/: JitSimpleText.cpp  JitSimpleText.h
